# dimabsa-csce5290

./: .gitignore  .gitmodules  README.md  csce5290_dimabsa.ipynb  environment.yml  pyproject.toml  pytest.ini
notebooks/: csce5290_dimabsa.ipynb
scripts/: download_data.py  eval.py  prepare_datasets.py  stage_data.py  train.py  utils_jsonl.py
src/dimabsa/: data.py  model.py  train_loop.py
tests/: conftest.py  test_model.py  test_prepare_datasets.py  test_stage_data.py  test_train.py  test_utils_jsonl.py
